<resources>
    <string name="app_name">牙豚商城</string>
    <string name="contentDescription">图片内容描述</string>
    <string name="start">进入首页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="index_search_txt">输入商品名称关键字</string>
    <string name="title_activity_activity_level">ActivityLevel</string>
    <string name="cart_total">共%1$d件商品,实付款( 含运费 ) ¥%2$2.2f</string>
    <string name="title_activity_activity_order_refound">ActivityOrderRefound</string>
    <string name="title_activity_activity_reg">ActivityReg</string>
    <string name="title_activity_activity_get_pwd">ActivityGetPwd</string>
    <string name="total">共%1$d件商品,商品金额 ¥%2$2.2f,优惠 ¥%3$2.2f,运费 ¥%4$2.2f</string>
    <string name="index_my">我的</string>
    <string name="index_cart">购物车</string>
    <string name="index_index">首页</string>
    <string name="index_sort">分类</string>
    <string name="index_warefare">福利</string>
    <string name="hm_hlxs_txt_1">账户余额明细</string>
    <string name="hm_hlxs_txt_2">我的钱包</string>
    <string name="hm_hlxs_txt_3">账户余额明细</string>
    <string name="hm_hlxs_txt_4">储值卡</string>
    <string name="hm_hlxs_txt_5">余额明细</string>
    <string name="hm_hlxs_txt_6">积分</string>
    <string name="hm_hlxs_txt_7">积分明细</string>
    <string name="hm_hlxs_txt_8">收入</string>
    <string name="hm_hlxs_txt_9">暂无数据</string>
    <string name="hm_hlxs_txt_10">暂无数据</string>
    <string name="hm_hlxs_txt_11">加载中</string>
    <string name="hm_hlxs_txt_12">已经到最后啦</string>
    <string name="hm_hlxs_txt_13">当前余额¥</string>
    <string name="hm_hlxs_txt_14">当前余额¥</string>
    <string name="hm_hlxs_txt_15">当前积分</string>
    <string name="hm_hlxs_txt_16">当前收入¥</string>
    <string name="hm_hlxs_txt_17">下级用户</string>
    <string name="hm_hlxs_txt_18">上月返利</string>
    <string name="hm_hlxs_txt_19">本月消费</string>
    <string name="hm_hlxs_txt_20">提现</string>
    <string name="hm_hlxs_txt_21">充值</string>
    <string name="hm_hlxs_txt_22">登录</string>
    <string name="hm_hlxs_txt_23">清空</string>
    <string name="hm_hlxs_txt_24">设置支付/提现密码</string>
    <string name="hm_hlxs_txt_25">修改支付/提现密码</string>
    <string name="hm_hlxs_txt_26">账户管理</string>
    <string name="hm_hlxs_txt_27">设置支付/提现密码</string>
    <string name="hm_hlxs_txt_28">修改登录密码</string>
    <string name="hm_hlxs_txt_29">设置/修改支付密码</string>
    <string name="hm_hlxs_txt_30">编辑收货地址</string>
    <string name="hm_hlxs_txt_31">保存</string>
    <string name="hm_hlxs_txt_32">编辑收货地址</string>
    <string name="hm_hlxs_txt_33">新增收货地址</string>
    <string name="hm_hlxs_txt_34">处理中</string>
    <string name="hm_hlxs_txt_35">请完善信息</string>
    <string name="hm_hlxs_txt_36">您输入的手机号格式不正确</string>
    <string name="hm_hlxs_txt_37">您输入的邮编格式不正确</string>
    <string name="hm_hlxs_txt_38">处理中</string>
    <string name="hm_hlxs_txt_39">联系人</string>
    <string name="hm_hlxs_txt_41">请输入收货人姓名</string>
    <string name="hm_hlxs_txt_42">联系方式</string>
    <string name="hm_hlxs_txt_43">请输入收货人联系方式</string>
    <string name="hm_hlxs_txt_44">邮政编码</string>
    <string name="hm_hlxs_txt_45">请输入邮政编码</string>
    <string name="hm_hlxs_txt_46">所在地区</string>
    <string name="hm_hlxs_txt_47">选择</string>
    <string name="hm_hlxs_txt_48">详细地址</string>
    <string name="hm_hlxs_txt_49">输入详细地址</string>
    <string name="hm_hlxs_txt_50">选择收货地址</string>
    <string name="hm_hlxs_txt_51">编辑</string>
    <string name="hm_hlxs_txt_52">管理收货地址</string>
    <string name="hm_hlxs_txt_53">选择收货地址</string>
    <string name="hm_hlxs_txt_54">处理中</string>
    <string name="hm_hlxs_txt_55">已经到最后啦</string>
    <string name="hm_hlxs_txt_56">暂无地址</string>
    <string name="hm_hlxs_txt_57">暂无地址</string>
    <string name="hm_hlxs_txt_58">意见反馈</string>
    <string name="hm_hlxs_txt_59">加载中</string>
    <string name="hm_hlxs_txt_60">操作成功</string>
    <string name="hm_hlxs_txt_61">请输入您的反馈信息</string>
    <string name="hm_hlxs_txt_62">请描述您遇到的问题及操作反馈</string>
    <string name="hm_hlxs_txt_63">提交</string>
    <string name="hm_hlxs_txt_64">输入支付宝账号</string>
    <string name="hm_hlxs_txt_65">支付宝账号</string>
    <string name="hm_hlxs_txt_66">保存</string>
    <string name="hm_hlxs_txt_67">请输入支付宝账号</string>
    <string name="hm_hlxs_txt_68">加载中</string>
    <string name="hm_hlxs_txt_69">编辑银行卡</string>
    <string name="hm_hlxs_txt_70">保存</string>
    <string name="hm_hlxs_txt_71">请选择银行</string>
    <string name="hm_hlxs_txt_72">请输入户主姓名</string>
    <string name="hm_hlxs_txt_73">请输入银行卡号</string>
    <string name="hm_hlxs_txt_74">请输入开户行名称</string>
    <string name="hm_hlxs_txt_75">加载中</string>
    <string name="hm_hlxs_txt_76">请选择</string>
    <string name="hm_hlxs_txt_77">选择银行</string>
    <string name="hm_hlxs_txt_78">请选择</string>
    <string name="hm_hlxs_txt_79">户主姓名</string>
    <string name="hm_hlxs_txt_80">请输入</string>
    <string name="hm_hlxs_txt_81">银行卡号</string>
    <string name="hm_hlxs_txt_82">请输入</string>
    <string name="hm_hlxs_txt_83">开户行名称</string>
    <string name="hm_hlxs_txt_84">请输入</string>
    <string name="hm_hlxs_txt_85">一成购车</string>
    <string name="hm_hlxs_txt_86">一成购车</string>
    <string name="hm_hlxs_txt_87">套餐专区</string>
    <string name="hm_hlxs_txt_88">处理中</string>
    <string name="hm_hlxs_txt_89">已经到最后啦</string>
    <string name="hm_hlxs_txt_90">暂无商品</string>
    <string name="hm_hlxs_txt_91">暂无商品</string>
    <string name="hm_hlxs_txt_92">暂无数据</string>
    <string name="hm_hlxs_txt_93">顶部</string>
    <string name="hm_hlxs_txt_95">抢购清单</string>
    <string name="hm_hlxs_txt_96">加载中</string>
    <string name="hm_hlxs_txt_97">操作成功</string>
    <string name="hm_hlxs_txt_98">马上去购物</string>
    <string name="hm_hlxs_txt_99">马上去购物</string>
    <string name="hm_hlxs_txt_100">确定清空购物清单</string>
    <string name="hm_hlxs_txt_101">取消</string>
    <string name="hm_hlxs_txt_102">确定</string>
    <string name="hm_hlxs_txt_103">请选择商品</string>
    <string name="hm_hlxs_txt_104">请先移除过期商品</string>
    <string name="hm_hlxs_txt_105">暂无商品</string>
    <string name="hm_hlxs_txt_106">全选</string>
    <string name="hm_hlxs_txt_107">总计：</string>
    <string name="hm_hlxs_txt_108">商品¥10, 运费￥10.00</string>
    <string name="hm_hlxs_txt_109">结算</string>
    <string name="hm_hlxs_txt_110">我的收藏</string>
    <string name="hm_hlxs_txt_112">编辑</string>
    <string name="hm_hlxs_txt_113">加载中</string>
    <string name="hm_hlxs_txt_114">已经到最后啦</string>
    <string name="hm_hlxs_txt_115">完成</string>
    <string name="hm_hlxs_txt_116">删除</string>
    <string name="hm_hlxs_txt_117">设为默认地址</string>
    <string name="hm_hlxs_txt_118">默认地址</string>
    <string name="hm_hlxs_txt_119">确定删除地址?</string>
    <string name="hm_hlxs_txt_120">¥</string>
    <string name="hm_hlxs_txt_121">请稍等...</string>
    <string name="hm_hlxs_txt_122">暂未开通</string>
    <string name="hm_hlxs_txt_123">分享成功</string>
    <string name="hm_hlxs_txt_124">分享失败</string>
    <string name="hm_hlxs_txt_125">分享取消</string>
    <string name="hm_hlxs_txt_126">关于我们</string>
    <string name="hm_hlxs_txt_127">详情</string>
    <string name="hm_hlxs_txt_128">详情</string>
    <string name="hm_hlxs_txt_129">说明</string>
    <string name="hm_hlxs_txt_130">说明</string>
    <string name="hm_hlxs_txt_131">邀请好友</string>
    <string name="hm_hlxs_txt_132">腾云APP是一个专业有机食品零售的APP。汇集了世界各地的特色零食，是购买零食的不二选择。</string>
    <string name="hm_hlxs_txt_133">邀请好友</string>
    <string name="hm_hlxs_txt_134">我的钱包</string>
    <string name="hm_hlxs_txt_135">账户余额</string>
    <string name="hm_hlxs_txt_136">储值卡</string>
    <string name="hm_hlxs_txt_137">代金券</string>
    <string name="hm_hlxs_txt_138">积分</string>
    <string name="hm_hlxs_txt_139">收入</string>
    <string name="hm_hlxs_txt_140">储值卡</string>
    <string name="hm_hlxs_txt_141">暂无可用代金券</string>
    <string name="hm_hlxs_txt_142">选择代金券</string>
    <string name="hm_hlxs_txt_143">已过期</string>
    <string name="hm_hlxs_txt_144">我的足迹</string>
    <string name="hm_hlxs_txt_145">删除</string>
    <string name="hm_hlxs_txt_146">一键签到</string>
    <string name="hm_hlxs_txt_148">已签到</string>
    <string name="hm_hlxs_txt_149">今日签到,可获得</string>
    <string name="hm_hlxs_txt_150">经验值</string>
    <string name="hm_hlxs_txt_151">今日签到</string>
    <string name="hm_hlxs_txt_152">连续签到</string>
    <string name="hm_hlxs_txt_153">经验值</string>
    <string name="hm_hlxs_txt_154">天</string>
    <string name="hm_hlxs_txt_155">今日已签到</string>
    <string name="hm_hlxs_txt_156">搜索结果</string>
    <string name="hm_hlxs_txt_157">全部</string>
    <string name="hm_hlxs_txt_158">搜索结果</string>
    <string name="hm_hlxs_txt_159">银行卡信息</string>
    <string name="hm_hlxs_txt_160">余额¥</string>
    <string name="hm_hlxs_txt_161">请选择银行卡</string>
    <string name="hm_hlxs_txt_162">请输入有效金额</string>
    <string name="hm_hlxs_txt_163">请输入有效金额</string>
    <string name="hm_hlxs_txt_164">余额不足</string>
    <string name="hm_hlxs_txt_165">提现金额需为100的整数倍</string>
    <string name="hm_hlxs_txt_166">请输入提现密码</string>
    <string name="hm_hlxs_txt_167">提现</string>
    <string name="hm_hlxs_txt_168">请先设置提现密码</string>
    <string name="hm_hlxs_txt_169">请输入提现密码</string>
    <string name="hm_hlxs_txt_170">支付宝提现</string>
    <string name="hm_hlxs_txt_171">银行卡提现</string>
    <string name="hm_hlxs_txt_172">请输入提现金额</string>
    <string name="_100">※提现金额需为100的整数倍</string>
    <string name="_0">余额¥0</string>
    <string name="hm_hlxs_txt_173">暂无记录</string>
    <string name="hm_hlxs_txt_174">暂无记录</string>
    <string name="hm_hlxs_txt_175">暂无评论</string>
    <string name="hm_hlxs_txt_177">所有评价</string>
    <string name="hm_hlxs_txt_178">(全场包邮)</string>
    <string name="hm_hlxs_txt_179">(满</string>
    <string name="hm_hlxs_txt_180">减运费)</string>
    <string name="hm_hlxs_txt_181">当前可用积分</string>
    <string name="hm_hlxs_txt_182">（可用积分</string>
    <string name="hm_hlxs_txt_183">订单提交成功</string>
    <string name="hm_hlxs_txt_184">请选择收货地址</string>
    <string name="hm_hlxs_txt_185">亲，您已勾选代金券</string>
    <string name="hm_hlxs_txt_186">亲，当前积分不足</string>
    <string name="hm_hlxs_txt_187">请选择收货地址</string>
    <string name="hm_hlxs_txt_188">亲，您已勾选积分</string>
    <string name="hm_hlxs_txt_189">应付款¥</string>
    <string name="hm_hlxs_txt_190">确认订单</string>
    <string name="hm_hlxs_txt_191">确定拨打客服</string>
    <string name="hm_hlxs_txt_193">确定交谈客服</string>
    <string name="hm_hlxs_txt_194">请输入您的反馈信息</string>
    <string name="hm_hlxs_txt_195">客服</string>
    <string name="hm_hlxs_txt_196">注册成功</string>
    <string name="hm_hlxs_txt_197">编辑成功</string>
    <string name="hm_hlxs_txt_198">男</string>
    <string name="hm_hlxs_txt_199">请输入昵称</string>
    <string name="hm_hlxs_txt_200">请输入性别</string>
    <string name="hm_hlxs_txt_201">正在压缩图片</string>
    <string name="hm_hlxs_txt_202">图片压缩失败</string>
    <string name="hm_hlxs_txt_204">完善个人信息</string>
    <string name="hm_hlxs_txt_205">编辑个人信息</string>
    <string name="hm_hlxs_txt_206">找回密码</string>
    <string name="hm_hlxs_txt_207">找回支付/提现密码</string>
    <string name="hm_hlxs_txt_208">正在验证手机号</string>
    <string name="hm_hlxs_txt_209">正在获取验证码</string>
    <string name="hm_hlxs_txt_210">正在验证随机码</string>
    <string name="hm_hlxs_txt_211">"验证码已发送到 "</string>
    <string name="hm_hlxs_txt_212">该手机好尚未注册,请先注册</string>
    <string name="hm_hlxs_txt_213">请先验证手机号</string>
    <string name="hm_hlxs_txt_214">请输入验证码</string>
    <string name="hm_hlxs_txt_215">请输入手机号</string>
    <string name="hm_hlxs_txt_216">您输入的手机号格式不正确</string>
    <string name="hm_hlxs_txt_217">重新发送</string>
    <string name="hm_hlxs_txt_218">重新发送</string>
    <string name="hm_hlxs_txt_219">设置密码</string>
    <string name="hm_hlxs_txt_220">密码不能为空</string>
    <string name="hm_hlxs_txt_221">请设置6-12位密码</string>
    <string name="hm_hlxs_txt_222">确认密码不能为空</string>
    <string name="hm_hlxs_txt_223">两次密码输入不一致,请重新输入</string>
    <string name="hm_hlxs_txt_224">重设密码成功</string>
    <string name="hm_hlxs_txt_225">商品详情</string>
    <string name="hm_hlxs_txt_226">已收藏</string>
    <string name="hm_hlxs_txt_227">收藏</string>
    <string name="hm_hlxs_txt_228">暂未设置</string>
</resources>