<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical">
    <include
        layout="@layout/bar_layout"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.hemaapp.hm_FrameWork.view.RefreshLoadmoreLayout
            android:id="@+id/refreshLoadmoreLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@color/transparent"
                android:scrollingCache="false"
                android:listSelector="@color/transparent"
                android:horizontalSpacing="3dp"
                android:numColumns="2"
                android:scrollbars="none"
                android:verticalSpacing="3dp"/>
        </com.hemaapp.hm_FrameWork.view.RefreshLoadmoreLayout>
        <FrameLayout
            android:id="@+id/goods_clearing_ly"
            android:layout_width="match_parent"
            android:layout_height="58.0dip"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10.0dip"
                android:paddingStart="10.0dip">
                <LinearLayout
                    android:id="@+id/alllayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/cart_allchoose_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:button="@drawable/check_selector" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:text="@string/hm_hlxs_txt_106"
                        android:textColor="@color/label_txt_color"
                        android:textSize="14sp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/del"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/index_search_bg"
                    android:text="@string/hm_hlxs_txt_116"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="#dfdfdf"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:visibility="invisible">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/search_to_top_bg"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@mipmap/search_to_top"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hm_hlxs_txt_93"
                    android:textColor="@color/txt_color"
                    android:textSize="@dimen/textsize_5"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>


</LinearLayout>
